--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 .PHONY: all test
 
 all: uci.c
-	@gcc uci.c  bitboards.c moveorderer.c evaluation.c san.c tt.c zobrist.c search.c board.c fen.c utils.c movegen.c magics.c -o sophia
+	@gcc uci.c  bitboards.c moveorderer.c evaluation.c san.c tt.c zobrist.c search.c board.c fen.c utils.c movegen.c magics.c -o PawnStorm
 
 perft: perft.c
 	gcc perft.c bitboards.c san.c zobrist.c board.c fen.c utils.c movegen.c magics.c -o perft
